fix: downgrade next.js to stable version and refresh dependencies

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "latest",
+    "react": "rc",
+    "react-dom": "rc",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1"
   },
