--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,19 @@
 {
-    "framework": "nextjs",
-    "buildCommand": "next build",
-    "outputDirectory": ".next"
+    "version": 2,
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/api/index.py"
+        }
+    ],
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/next"
+        },
+        {
+            "src": "api/index.py",
+            "use": "@vercel/python"
+        }
+    ]
 }
