--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
-    "version": 2,
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "/api/index.py"
-        }
-    ],
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/next"
-        },
-        {
-            "src": "api/index.py",
-            "use": "@vercel/python"
+            "source": "/api/(.*)",
+            "destination": "api/index.py"
         }
     ]
 }
