fix(deploy): slim down dependencies to fit Vercel 500MB limit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
 fastapi
-uvicorn
 python-dotenv
-langchain
-langchain-community
+langchain-core
 langchain-openai
 langchain-google-genai
 langchain-anthropic
 yfinance
 pandas
 duckduckgo-search
-xmltodict
 requests
 httpx
 pydantic
-datetime
-pytz
-ddgs
 lxml
